--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Geospatial Centroid 
-description: Sharing html content. 
+title: Geospatial Centroid
+description: Sharing Content. 
