--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Geospatial Centroid
-description: Sharing Content. 
+description: Sharing Content. <br>  <a href='https://geospatialcentroid.github.io/vitis/home'>Vitis Home Page</a> 
